add about page content

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,1 +1,12 @@
-{{outlet}}
+<div class="container">
+  <div id="about">
+    <img class="about-img" src="http://pngimg.com/upload/orange_PNG805.png">
+    <h1>About Us</h1>
+  </div>
+  <p>
+    I saw beyonces tizzles and my pizzle went crizzle go to hizzle uhuh ... yih! sit amet, consectetuer adipiscing elizzle. Break it down sapien velizzle, rizzle volutpizzle, suscipizzle quis, gravida vizzle, arcu. Pellentesque dizzle sure. Sizzle erizzle. Fusce izzle break it down dapibizzle turpis tempus shit. Maurizzle pellentesque nibh i saw beyonces tizzles and my pizzle went crizzle shiz. Boofron izzle tortor. Pellentesque pot sheezy shiz. In daahng dawg dang platea dictumst. Shizznit dapibizzle. Nizzle tellus shut the shizzle up, pretizzle eu, rizzle pot, ghetto vitae, nunc. I saw beyonces tizzles and my pizzle went crizzle suscipizzle. Shizzle my nizzle crocodizzle sempizzle velit sizzle daahng dawg.
+  </p>
+  <p>
+    Etizzle laoreet fo mammasay mammasa mamma oo sa nisl. Sed quizzle arcu. Ghetto bling bling, ipsum own yo' crazy scelerisque, nulla purizzle euismod black, izzle luctizzle metizzle nulla hizzle shizzle my nizzle crocodizzle. Vivamizzle rizzle, tortizzle izzle varius dang, izzle nunc ultricies fizzle, izzle shiz leo brizzle izzle dolor. Bling bling aliquet, orci gangster volutpat consectetuer, sizzle we gonna chung dizzle you son of a bizzle, go to hizzle bling bling enizzle crackalackin izzle nisl. Dang a velizzle ac orci eleifend viverra. Phasellus nizzle da bomb. Gangsta nizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle uhuh ... yih! pede fo shizzle facilisis. Maecenas sapizzle nulla, iaculizzle cool, break yo neck, yall daahng dawg, crunk a, shit. You son of a bizzle i saw beyonces tizzles and my pizzle went crizzle shiz quis nibh bibendizzle izzle. Nam check out this consectetuer yo mamma. Aliquam mah nizzle volutpizzle. Uhuh ... yih! check it out away at sheezy pretizzle faucibus. Cras nec lacizzle sed dui condimentum ultricizzle. Shiznit nisl. Brizzle izzle urna. Integizzle laoreet own yo' stuff mi. Donizzle at gangster.
+  </p>
+</div>
