--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -14,6 +14,11 @@ li:first-child {
 #logo {
   height: 50px;
 }
+#about {
+display: flex;
+justify-content: center;
+vertical-align: middle;
+}
 
 header {
   background: lightblue;
