add model posts

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,13 @@
+<div class="container">
+  <div id="contact">
+    <img class="about-img" src="http://pngimg.com/upload/orange_PNG805.png">
+    <h1>Contact Me</h1>
+  </div>
+
+  <p>
+    Insert form here
+  </p>
+</div>
+
+
 {{outlet}}
