complete osts-tile component

--- a/app/templates/components/posts-tile.hbs
+++ b/app/templates/components/posts-tile.hbs
@@ -1,1 +1,8 @@
+<div class="post__container">
+  <h1>{{post.title}}</h1>
+  <h4>By {{post.author}} on {{post.date}}</h4>
+  <p>{{post.body}}</p>
+</div>
+<br>
+
 {{yield}}
