--- a/app/templates/components/posts-tile.hbs
+++ b/app/templates/components/posts-tile.hbs
@@ -1,7 +1,10 @@
 <div class="post__container">
   <h1>{{post.title}}</h1>
   <h4>By {{post.author}} on {{post.date}}</h4>
-  <p>{{post.body}}</p>
+  <div class="text__area">
+    <img src="{{post.image}}" alt="image" />
+    <p>{{post.body}}</p>
+  </div>
 </div>
 <br>
 
