add edit-post component

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,7 @@
   <nav>
     <ul>
       <li>{{#link-to 'index'}}<img id="logo" src="http://pngimg.com/upload/orange_PNG805.png">{{/link-to}}</li>
+      {{#link-to 'admin'}}<li class="nav-item">Admin</li>{{/link-to}}
       {{#link-to 'about'}}<li class="nav-item">About</li>{{/link-to}}
       {{#link-to 'contact'}}<li class="nav-item">Contact</li>{{/link-to}}
     </ul>
