--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -1,1 +1,10 @@
+<div class="container">
+  <h1>Update</h1>
+  {{new-post addNewPost2="addNewPost3"}}
+</div>
+
+{{#each model as |post|}}
+  {{edit-post post=post}}
+{{/each}}
+
 {{outlet}}
