--- a/app/templates/components/edit-post.hbs
+++ b/app/templates/components/edit-post.hbs
@@ -16,7 +16,7 @@
   <label for="image">Image URL</label>
   {{input value=post.image id="updateImage" placeholder=post.image}}
 
-  <button {{action 'savePost'}}class="btn btn-lg btn-success" type="button" name="button">Save Post</button>
+  <button {{action 'savePost' post}}class="btn btn-lg btn-success" type="button" name="button">Save Post</button>
 </form>
 {{else}}
   <h3>{{post.title}}</h3>
