add components for post.hbs

--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,1 +1,11 @@
+<div class="container">
+  <h2>{{model.title}}</h2>
+  <h6>By {{model.author}} on {{model.date}}</h6>
+  <div class="text__area">
+    <img src="{{model.image}}" alt="" />
+    <p>{{model.body}}</p>
+  </div>
+</div>
+
+
 {{outlet}}
