add animate fadeIn for all routes

--- a/app/templates/components/posts-tile.hbs
+++ b/app/templates/components/posts-tile.hbs
@@ -1,5 +1,5 @@
 {{#link-to 'post' post.id}}
-<div class="post__container tiles col-md-4">
+<div class="post__container tiles col-md-4 animated fadeIn">
   <div class="row">
     <h3>{{post.title}}</h3>
     <h6>{{post.date}}</h6>
