--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container animated fadeIn">
   <div id="about">
     <img class="about-img" src="http://pngimg.com/upload/orange_PNG805.png">
     <h1>About Us</h1>
