--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container animated fadeIn">
   <div id="contact">
     <img class="about-img" src="http://pngimg.com/upload/orange_PNG805.png">
     <h1>Contact Me</h1>
