--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container animated fadeIn">
   <h2>{{model.title}}</h2>
   <h6>By {{model.author}} on {{model.date}}</h6>
   <div class="text__area">
