--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -35,3 +35,22 @@ header {
   height: 250px;
   width:350px;
 }
+
+/**** Individual Post *****/
+
+.text__area{
+  padding-top: 2vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title__area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.post__image {
+  height: 300px;
+}
