--- a/app/templates/components/new-post.hbs
+++ b/app/templates/components/new-post.hbs
@@ -7,7 +7,7 @@
     {{input value=author id="author" placeholder=post.author}}
 
     <label for="date">Date</label>
-    {{input type="date" value=date id="date" placeholder=post.date}}
+    {{input type="text" value=date id="date" placeholder=post.date}}
 
     <label for="body">Body</label>
     {{textarea rows="10" cols="100" value=body id="body" placeholder=post.body}}
