--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,7 +1,7 @@
 <div class="container animated fadeIn">
   <div id="about">
     <img class="about-img" src="http://pngimg.com/upload/orange_PNG805.png">
-    <h1>About Us</h1>
+    <h1 class="about-title">About</h1>
   </div>
   <p>
     I saw beyonces tizzles and my pizzle went crizzle go to hizzle uhuh ... yih! sit amet, consectetuer adipiscing elizzle. Break it down sapien velizzle, rizzle volutpizzle, suscipizzle quis, gravida vizzle, arcu. Pellentesque dizzle sure. Sizzle erizzle. Fusce izzle break it down dapibizzle turpis tempus shit. Maurizzle pellentesque nibh i saw beyonces tizzles and my pizzle went crizzle shiz. Boofron izzle tortor. Pellentesque pot sheezy shiz. In daahng dawg dang platea dictumst. Shizznit dapibizzle. Nizzle tellus shut the shizzle up, pretizzle eu, rizzle pot, ghetto vitae, nunc. I saw beyonces tizzles and my pizzle went crizzle suscipizzle. Shizzle my nizzle crocodizzle sempizzle velit sizzle daahng dawg.
