--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -1,11 +1,17 @@
 <div class="container animated fadeIn">
-  <h1>Update</h1>
-  {{new-post addNewPost2="addNewPost3"}}
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Update</h1>
+      {{new-post addNewPost2="addNewPost3"}}
+    </div>
+    <div class="col-md-6">
+      {{#each model as |post|}}
+        {{edit-post post=post savePost2="savePost3"}}
+        <button class="btn btn-danger"{{action 'delete' post}} type="button" name="button">Delete</button>
+      {{/each}}
+    </div>
+  </div>
 
-{{#each model as |post|}}
-  {{edit-post post=post savePost2="savePost3"}}
-  <button class="btn btn-danger"{{action 'delete' post}} type="button" name="button">Delete</button>
-{{/each}}
 </div>
 
 {{outlet}}
