--- a/app/templates/components/new-post.hbs
+++ b/app/templates/components/new-post.hbs
@@ -1,20 +1,17 @@
 {{#if addNewPost}}
-  <form>
+  <form class="new__post">
     <label for="title">Title</label>
     {{input value=title id="title" placeholder=post.title}}
 
     <label for="author">Author</label>
     {{input value=author id="author" placeholder=post.author}}
 
-    <label for="date">Date</label>
-    {{input type="text" value=date id="date" placeholder=post.date}}
-
     <label for="body">Body</label>
-    {{textarea rows="10" cols="100" value=body id="body" placeholder=post.body}}
+    {{textarea rows="10" cols="60" value=body id="body" placeholder=post.body}}
 
     <label for="image">Image URL</label>
     {{input value=image id="image" placeholder=post.image}}
-
+    <br>
     <button {{action 'addNewPost'}}class="btn btn-lg btn-success" type="button" name="button">Save Post</button>
   </form>
 {{else}}
