introduce comment tile to individual posts

--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -7,6 +7,10 @@
     <img class="post__image" src="{{model.image}}" alt="" />
   </div>
     <p class="post__body">{{model.body}}</p>
+
+    <div class="comments">
+      {{comment-tile}}
+    </div>
 </div>
 
 
