--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -9,7 +9,9 @@
     <p class="post__body">{{model.body}}</p>
 
     <div class="comments">
+      <h2>Comments</h2>
       {{comment-tile}}
+      {{new-comment}}
     </div>
 </div>
 
