--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -11,7 +11,7 @@
     <div class="comments">
       <h2>Comments</h2>
       {{comment-tile}}
-      {{new-comment}}
+      {{new-comment addNewComment2="addNewComment3" post=model}}
     </div>
 </div>
 
