--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -10,7 +10,7 @@
 
     <div class="comments">
       <h2>Comments</h2>
-      {{comment-tile}}
+      {{comment-tile  post=model}}
       {{new-comment addNewComment2="addNewComment3" post=model}}
     </div>
 </div>
