--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -10,7 +10,7 @@
 
     <div class="comments">
       <h2>Comments</h2>
-      {{comment-tile  post=model}}
+      {{comment-tile  post=model}}<!--we are defining this model(the post we are looking at) as 'post'. Then inside the comment-tile.hbs............-->
       {{new-comment addNewComment2="addNewComment3" post=model}}
     </div>
 </div>
