--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -55,19 +55,48 @@ header {
 
 /**** Individual Post *****/
 
-.text__area{
-  padding-top: 2vh;
+.post__container {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.image__area{
+  padding-top: 2vh;
+
+  height: 400px;
+
 }
 
 .title__area {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
 }
 
 .post__image {
   height: 300px;
+}
+
+.post__body {
+  margin-top: 50px;
+  font-size: 1.5em;
+}
+
+.comments {
+
+}
+
+.each_comment {
+  height: auto;
+  width: auto;
+  padding: 10px 50px 10px 50px;
+  border-style: outset;
+  margin: 5px;
+}
+
+.new__comment {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  justify-content: center;
 }
