--- a/app/templates/components/new-comment.hbs
+++ b/app/templates/components/new-comment.hbs
@@ -3,8 +3,8 @@
   <label for="name">Name</label>
   {{input value=name id="name"}}
 
-  <label for="rating">Rating</label>
-  {{input value=rating id="rating"}}
+  <label for="rating">Rating / 5</label>
+  {{input type="number" min='1' max='5'  value=rating id="rating"}}
 
   <label for="body">Body</label>
   {{textarea rows="10" cols="60" value=body id="body"}}
