--- a/app/templates/components/posts-tile.hbs
+++ b/app/templates/components/posts-tile.hbs
@@ -3,7 +3,7 @@
   <div class="row">
     <h3>{{post.title}}</h3>
     <h6>{{post.date}}</h6>
-    <div class="text__area">
+    <div class="image__area">
       <img src="{{post.image}}" alt="image" />
     </div>
   </div>
